# d-mo_modif

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  requirements.txt  sdkconfig  sdkconfig.defaults
.devcontainer/: devcontainer.json
.github/: README.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  ci.yml  ci_orchestrated.yml
agents/: accessibility_agent.md  allocator_agent.md  animation_agent.md  api_agent.md  assets_agent.md  board_bringup_agent.md  bugfix_agent.md  build_agent.md  calibration_agent.md  ci_agent.md  cmake_agent.md  codegen_agent.md  compliance_agent.md  concurrency_agent.md  config_agent.md  coverage_agent.md  crypto_agent.md  dependency_agent.md  display_timing_agent.md  dma_agent.md  docs_agent.md  fault_injection_agent.md  flake_agent.md  fuzz_agent.md  graphics_pipeline_agent.md  hw_validation_agent.md  i18n_agent.md  logging_agent.md  memory_agent.md  metrics_agent.md  networking_agent.md  pinmap_agent.md  portability_agent.md  power_agent.md  privacy_gdpr_agent.md  profiling_agent.md  protocol_agent.md  quality_gate_agent.md  refactor_agent.md  reliability_agent.md  (+16 more)
components/LovyanGFX/: README.md
components/LovyanGFX/src/lgfx/Fonts/efont/: lgfx_efont_tw.c
components/esp_timer/: Kconfig
components/esp_timer/include/esp_private/: esp_timer_private.h
components/esp_timer/private_include/: esp_timer_impl.h
components/esp_timer/src/: esp_timer.c  esp_timer_impl_common.c  esp_timer_impl_lac.c  esp_timer_impl_systimer.c  ets_timer_legacy.c  system_time.c
components/esp_timer/test_apps/: README.md  pytest_esp_timer_ut.py  sdkconfig.ci.dfs  sdkconfig.ci.flash_auto_suspend
components/esp_timer/test_apps/main/: CMakeLists.txt  test_esp_timer_dfs.c  test_ets_timer.c
components/io_extension/: io_extension.c  io_extension.h
components/lvgl__lvgl/: CMakeLists.txt  Kconfig  README.md  lv_conf_template.h
components/lvgl_port/: CMakeLists.txt  lvgl_port.c  lvgl_port.h
components/rgb_lcd_port/: rgb_lcd_port.c  rgb_lcd_port.h
components/sd/: CMakeLists.txt  sd.c  sd.h
components/twai/: CMakeLists.txt  twai.c  twai.h
components/usart/: usart.c  usart.h
main/: CMakeLists.txt  config.h  idf_component.yml  lv_conf.h  main.c
main/ui/: CMakeLists.txt  README.md  can.c  create_user.c  login.c  main_screen.c  pwm.c  rs485.c  ui.c  ui.h  ui_events.c  ui_helpers.c  ui_helpers.h  wifi.c
main/ui/components/: ui_comp_hook.c
main/ui/images/: CMakeLists.txt  ui_img_485_png.c  ui_img_can_png.c  ui_img_eye_png.c  ui_img_ok_png.c  ui_img_pwm_png.c  ui_img_wifi_1_png.c  ui_img_wifi_2_png.c  ui_img_wifi_3_png.c  ui_img_wifi_4_png.c  ui_img_wifi_png.c
main/ui/screens/: ui_Main.c  ui_Main_WIFI.c
main/user/add_password/: add_password.c  add_password.h
main/user/can/: can.c  can.h
main/user/pwm/: pwm.c  pwm.h
main/user/rs485/: rs485.c  rs485.h
main/user/sd_card/: sd_card.c  sd_card.h
main/user/wifi/: wifi.c  wifi.h  wifi_ap.c  wifi_scan.c  wifi_sta.c
scripts/: README_SETUP.md  setup_codex_env.sh  setup_local.sh
tests/can/: CMakeLists.txt
tests/can/main/: CMakeLists.txt  test_can.c
tests/rs485/: CMakeLists.txt
tests/rs485/main/: CMakeLists.txt  test_rs485.c
tests/smoke/: CMakeLists.txt  sdkconfig.defaults
tests/smoke/main/: CMakeLists.txt  test_smoke_lvgl.c
tests/wifi/: CMakeLists.txt
tests/wifi/main/: CMakeLists.txt  test_wifi.c
