idf_component_register(
    SRCS
        ui_img_485_png.c
	ui_img_can_png.c
	ui_img_eye_png.c
	ui_img_log_on_png.c	
	ui_img_ok_png.c
	ui_img_pwm_png.c
	ui_img_wifi_1_png.c
	ui_img_wifi_2_png.c
	ui_img_wifi_3_png.c
	ui_img_wifi_4_png.c
	ui_img_wifi_png.c
    INCLUDE_DIRS "."
    REQUIRES lvgl__lvgl
)
